--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -27,10 +27,10 @@
         android:id="@+id/headline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="48dp"
         android:text="@string/start_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="23sp"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@id/subline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/start_subline"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="12sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/subline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,8 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="To get started please enter your nickname."
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="12sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/nickname_input_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Nickname"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="15sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subline2" />
@@ -81,9 +80,10 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/input_border"
         android:hint="..."
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nickname_input_label" />
@@ -97,7 +97,7 @@
         android:enabled="true"
         android:text="Let's Start"
         android:textColor="@color/white"
-        android:textSize="15sp"
+        android:textSize="14sp"
         app:backgroundTint="@color/button_background_color"
         app:cornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
