--- a/app/src/main/res/layout/fragment_weekly_overview.xml
+++ b/app/src/main/res/layout/fragment_weekly_overview.xml
@@ -14,8 +14,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="32dp">
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp">
 
             <TextView
                 android:id="@+id/headerTitle"
@@ -32,13 +32,12 @@
                 android:id="@+id/weekLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:text="Week 00"
                 android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/headerTitle"
-                android:layout_marginTop="12dp"
                 android:textStyle="bold"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/headerTitle" />
 
             <TextView
                 android:id="@+id/days"
@@ -54,51 +53,69 @@
                 android:id="@+id/barChart"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/days"
-                app:layout_constraintDimensionRatio="1:1"
-            />
+                app:layout_constraintTop_toBottomOf="@id/days" >
+            </com.github.mikephil.charting.charts.BarChart>
+
+            <ImageView
+                android:id="@+id/leftArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/previousWeek"
+                app:layout_constraintBottom_toBottomOf="@id/previousWeek"
+                />
 
             <TextView
                 android:id="@+id/previousWeek"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Previous week"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/barChart"
-                app:layout_constraintBottom_toTopOf="@id/fragment_timerange_list"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
                 android:clickable="true"
-                />
+                android:text="Previous week"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@id/fragment_timerange_list"
+                app:layout_constraintStart_toEndOf="@id/leftArrow"
+                app:layout_constraintTop_toBottomOf="@id/barChart" />
 
             <TextView
                 android:id="@+id/nextWeek"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:clickable="true"
                 android:text="Next week"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/barChart"
                 app:layout_constraintBottom_toTopOf="@id/fragment_timerange_list"
-                android:layout_marginBottom="24dp"
-                android:layout_marginTop="24dp"
-                android:clickable="true"
+                app:layout_constraintEnd_toStartOf="@id/rightArrow"
+                app:layout_constraintTop_toBottomOf="@id/barChart" />
+
+            <ImageView
+                android:id="@+id/rightArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/nextWeek"
+                app:layout_constraintBottom_toBottomOf="@id/nextWeek"
                 />
 
             <androidx.fragment.app.FragmentContainerView
-                android:name="com.example.bime.fragments.TimerangeListFragment"
                 android:id="@+id/fragment_timerange_list"
-                tools:layout="@layout/fragment_timerange_list"
+                android:name="com.example.bime.fragments.TimerangeListFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barChart"
-                android:layout_width="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp" />
+                tools:layout="@layout/fragment_timerange_list" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
