--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -35,7 +35,7 @@
         android:id="@+id/newEntry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+ New Entry"
+        android:text="+ New Activity"
         android:textSize="16sp"
         android:textColor="@color/orange_500"
         app:layout_constraintEnd_toEndOf="parent"
