--- a/app/src/main/res/layout/fragment_edit_entry.xml
+++ b/app/src/main/res/layout/fragment_edit_entry.xml
@@ -78,7 +78,7 @@
             <CalendarView
                 android:id="@+id/calendarView"
                 android:layout_width="0dp"
-                android:layout_height="260dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
