--- a/app/src/main/res/layout/fragment_weekly_overview.xml
+++ b/app/src/main/res/layout/fragment_weekly_overview.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Week 00"
+                android:text="Calendar week 00"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
