--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@id/listHeader"
         android:background="@android:color/darker_gray"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+       <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allDays"
         android:nestedScrollingEnabled="false"
         android:layout_width="0dp"
@@ -72,5 +72,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="12dp"
         />
+    <TextView
+        android:id="@+id/emptyList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_data_to_display_start_by_adding_a_new_activity"
+        android:textColor="@color/blue_200"
+        android:layout_marginTop="12dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        android:visibility="gone"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="32dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
