scrolling kinda works, empty image is displayed

--- a/app/src/main/res/layout/fragment_weekly_overview.xml
+++ b/app/src/main/res/layout/fragment_weekly_overview.xml
@@ -5,17 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="-32dp"
+        app:layout_constraintBottom_toTopOf="@id/coordinator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="24dp">
+            android:layout_marginTop="32dp">
 
             <TextView
                 android:id="@+id/headerTitle"
@@ -24,7 +27,6 @@
                 android:text="@string/headline_overview"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="32sp"
-                app:layout_constraintBottom_toTopOf="@id/weekLabel"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +47,6 @@
                 android:layout_height="wrap_content"
                 android:text="0x.0x - 0y.0y"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@id/barChart"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/weekLabel" />
 
@@ -57,7 +58,6 @@
                 android:textSize="12sp"
                 android:textColor="@color/orange_500"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/weekLabel"
                 app:layout_constraintBottom_toTopOf="@id/barChart"
                 android:clickable="true"
                 />
@@ -92,7 +92,6 @@
                 android:clickable="true"
                 android:text="Previous week"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@id/fragment_timerange_list"
                 app:layout_constraintStart_toEndOf="@id/leftArrow"
                 app:layout_constraintTop_toBottomOf="@id/barChart" />
 
@@ -105,7 +104,6 @@
                 android:clickable="true"
                 android:text="Next week"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@id/fragment_timerange_list"
                 app:layout_constraintEnd_toStartOf="@id/rightArrow"
                 app:layout_constraintTop_toBottomOf="@id/barChart" />
 
@@ -124,16 +122,15 @@
                 android:id="@+id/fragment_timerange_list"
                 android:name="com.example.bime.fragments.TimerangeListFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/barChart"
+                app:layout_constraintTop_toBottomOf="@id/rightArrow"
                 tools:layout="@layout/fragment_timerange_list" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator"
