--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -9,82 +9,78 @@
         android:id="@+id/areaHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
         android:text="Daily overview"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@id/listHeader"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/listHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="12dp"
         android:text="Header"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/areaHeader"
         app:layout_constraintBottom_toTopOf="@id/line"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="12dp"
-    />
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/newEntry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+ New Activity"
-        android:textSize="16sp"
-        android:textColor="@color/orange_500"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/areaHeader"
-        app:layout_constraintBottom_toTopOf="@id/line"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="12dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="12dp"
         android:clickable="true"
-     />
+        android:text="+ New Activity"
+        android:textColor="@color/orange_500"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/line"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/line"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginVertical="12dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="100dp"
+        android:background="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/listHeader"
-        android:background="@android:color/darker_gray"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-       <androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allDays"
-        android:nestedScrollingEnabled="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:itemCount="3"
+        android:layout_marginTop="12dp"
+        android:nestedScrollingEnabled="false"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line"
-        tools:listitem="@layout/item_day"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="12dp"
-        />
+        tools:itemCount="3"
+        tools:listitem="@layout/item_day" />
+
     <TextView
         android:id="@+id/emptyList"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/no_data_to_display_start_by_adding_a_new_activity"
-        android:textColor="@color/blue_200"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="12dp"
+        android:text="@string/no_data_to_display_start_by_adding_a_new_activity"
+        android:textAlignment="center"
+        android:textColor="@color/blue_200"
         android:textSize="24sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line"
-        android:visibility="gone"
-        android:textAlignment="center"
-        android:layout_marginHorizontal="32dp"/>
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
