--- a/app/src/main/res/layout/fragment_weekly_overview.xml
+++ b/app/src/main/res/layout/fragment_weekly_overview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="24dp"
@@ -18,7 +18,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="32dp">
+            android:paddingTop="32dp"
+            android:paddingBottom="64dp">
 
             <TextView
                 android:id="@+id/headerTitle"
@@ -130,7 +131,7 @@
                 tools:layout="@layout/fragment_timerange_list" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator"
